--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -52,3 +52,23 @@ body {
 .pagination>li>a:hover {
   border-radius: 15px;
 }
+
+.bg-0 {
+  background-color: #B7B3B2;
+}
+
+.bg-1 {
+  background-color: #ef7a29;
+}
+
+.bg-2 {
+  background-color: #f8ab22;
+}
+
+.bg-3 {
+  background-color: #fbc695;
+}
+
+.bg-4 {
+  background-color: #83c4e8;
+}
