--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -50,11 +50,11 @@ table.table.table-hover.table-sm
 
 = link_to 'Export', tasks_path(format: :csv), class:"btn btn-lg btn-outline-warning mb-3"
 
-= form_tag import_tasks_path, multipart: true, class: 'mb-3' do
+= form_tag import_tasks_path, multipart: true, class: 'mb-5' do
   = file_field_tag :file
   = submit_tag 'Import', class: 'btn btn-outline-warning'
 
-.btn.btn-outline-secondary#done_btn
+.btn.btn-outline-secondary.mb-3#done_btn
   |  Done Task
 
 #done_group
