--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -28,3 +28,5 @@ table.table.table-hover.table-sm
             i.fa.fa-edit.fa-2x
           span.delete= link_to [:admin, user], method: :delete, remote: true, data:{ confirm: "Are you sure you wanna delete 【#{user.name}】?"}
             i.fa.fa-trash.fa-2x
+
+== render 'analytics'
