refs #16440 UIの変更(header色、特殊タスクの大きさ,newの文字変更)/doneメソッド編集

--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -1,5 +1,5 @@
 h1 Users Table
-= link_to '新規登録', new_admin_user_path, class: 'btn btn-outline-warning'
+= link_to '新規登録', new_admin_user_path, class: 'btn btn-outline-warning mb-3'
 table.table.table-hover.table-sm
   tr.user_category.bg-white
     th ID
