--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,10 +1,10 @@
-.header{
+.header {
   ul {
     margin: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #FF7F50;
+    background-color: #ffa838;
   }
   li {
     list-style: none;
