--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,17 +1,19 @@
 .header
   ul
-    ul
-      - if current_user
-        li.text-monospace.m-3
-          = "#{current_user.name} さん"
-      li= link_to 'One Task', root_path
-    - if current_user
-      li= link_to 'New', new_task_path
-      li
-        ul
-          - if current_user.admin?
-            li= link_to 'All User', admin_users_path, class: 'nav-link'
-          li= link_to 'ログアウト', logout_path, class: 'nav-link'
-    - else
-      li.nav-item= link_to 'ログイン', login_path, class: 'nav-link'
+    li
+      ul
+        - if current_user
+          li.text-monospace.m-3
+            = "#{current_user.name} さん"
+        li= link_to 'タスク状況', logout_path
+    li= link_to 'One Task', root_path
+    li
+      ul
+        li= link_to new_task_path
+          i.fa.fa-plus-circle.fa-2x
+        - if current_user.admin?
+          li.nav-link= link_to 'All User', admin_users_path
+          li.nav-link= link_to 'ログアウト', logout_path
+        - else
+          li.nav-item= link_to 'ログイン', login_path
 
