--- a/app/views/shared/_focus_task.html.slim
+++ b/app/views/shared/_focus_task.html.slim
@@ -1,7 +1,7 @@
 h1 Focus Table
 .top_task.row
 
-  .col-xl-6.col-md-12
+  .col-md-6.col-sm-12
     h2
       i.fa.fa-fire
       | Task on fire
@@ -21,7 +21,7 @@ h1 Focus Table
           td = task.status
           td = task.priority
 
-  .col-xl-6.col-md-12
+  .col-md-6.col-sm-12
     h2
       i.fa.fa-star
       | Primary Task
