--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -5,13 +5,13 @@
         - if current_user
           li.text-monospace.m-3
             = "#{current_user.name} さん"
-        li= link_to 'タスク状況', logout_path
+        li= link_to 'タスク状況', root_path
     li= link_to 'One Task', root_path
     li
-      ul
+      ul.login_out_ul
         li= link_to new_task_path
           i.fa.fa-plus-circle.fa-2x
-        - if current_user.admin?
+        - if current_user&.admin?
           li.nav-link= link_to 'All User', admin_users_path
           li.nav-link= link_to 'ログアウト', logout_path
         - else
