--- a/app/views/shared/_focus_task.html.slim
+++ b/app/views/shared/_focus_task.html.slim
@@ -13,9 +13,8 @@ h1 Focus Table
         th = Task.human_attribute_name(:status)
         th = Task.human_attribute_name(:priority)
       - current_user.tasks.order(end_time: :asc).each do |task|
-        tr class= "task_category shadow-sm rounded bg-3 #{hidden_fire(task)}"
-          td = link_to task do
-            = task.id
+        tr class= "task_category shadow-sm rounded bg-3 #{hidden_fire(task)}" onclick='window.location="#{'/tasks/' + task.id.to_s}"' role="link"
+          td = task.id
           td = task.name
           td = l task.end_time, format: :short
           td = task.status
@@ -33,9 +32,8 @@ h1 Focus Table
         th = Task.human_attribute_name(:status)
         th = Task.human_attribute_name(:priority)
       - current_user.tasks.order(end_time: :asc).each do |task|
-        tr class= "task_category shadow-sm rounded bg-4 #{hidden_primary(task)}"
-          td = link_to task do
-            = task.id
+        tr class= "task_category shadow-sm rounded bg-4 #{hidden_primary(task)}" onclick='window.location="#{'/tasks/' + task.id.to_s}"' role="link"
+          td = task.id
           td = task.name
           td = l task.end_time, format: :short
           td = task.status
