refs #16299 jqueryの設定/slideToggleの設定

--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -71,6 +71,10 @@ table.table.table-hover.table-sm
         td = task.status
         td = task.priority
 
-/ #new fai
-/ javascript:
-/   $("#new").css("color","red")
+
+javascript:
+  $(function () {
+    $("#done_btn").on("click", () => {
+      $("#done_group").slideToggle();
+    });
+  });
