--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -2,14 +2,14 @@
 == render 'shared/search_form'
 .tasks_table
   h1 Tasks Table
-  .d-flex.justify-content-around
-    .create_pointer.btn.btn-outline-warning onclick='window.location="#{tasks_path(sort_column: "created_at")}"' role="link"
+  .d-flex.justify-content-center
+    .create_pointer.btn.btn-outline-warning.mx-3 onclick='window.location="#{tasks_path(sort_column: "created_at")}"' role="link"
       = created_at_sub
-    .end_pointer.btn.btn-outline-warning onclick='window.location="#{tasks_path(sort_column: "end_time")}"' role="link"
+    .end_pointer.btn.btn-outline-warning.mx-3 onclick='window.location="#{tasks_path(sort_column: "end_time")}"' role="link"
       = end_time_sub
-    .status_pointer.btn.btn-outline-warning onclick='window.location="#{tasks_path(sort_column: "status")}"' role="link"
+    .status_pointer.btn.btn-outline-warning.mx-3 onclick='window.location="#{tasks_path(sort_column: "status")}"' role="link"
       = status_sub
-    .priority_pointer.btn.btn-outline-warning onclick='window.location="#{tasks_path(sort_column: "priority")}"' role="link"
+    .priority_pointer.btn.btn-outline-warning.mx-3 onclick='window.location="#{tasks_path(sort_column: "priority")}"' role="link"
       = priority_sub
   table.table.table-hover.table-sm
   table.table.table-hover.table-sm
@@ -49,18 +49,6 @@
             i.fa.fa-trash.fa-2x
         td = button_to 'Done', done_path(task), method: :post, class:"btn btn-outline-warning"
   = paginate @tasks
-
-  .form.shadow.p-5.rounded.mb-3
-    h3 CSV for Task
-    .form-row
-      .col-4
-        b CSVファイルのダウンロード
-      .col-5
-        = link_to 'Download', tasks_path(format: :csv), class:"btn btn-outline-warning mb-3"
-    b CSVファイルのインポート
-    = form_tag import_tasks_path, multipart: true, class: 'mb-5' do
-      = file_field_tag :file
-      = submit_tag 'Import', class: 'btn btn-outline-warning'
 
   .btn.btn-outline-secondary.my-3#done_btn
     |  Done Task
