refs #16440 色/形/配置のUI変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "header";
 @import "flash";
 @import "tasks";
+@import "labels";
 @import "custom";
 @import "search_form";
 @import "form";
