--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -4,6 +4,7 @@ body {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+  background-color: #eceff1;
 }
 
 .container {
@@ -54,15 +55,15 @@ body {
 }
 
 .bg-0 {
-  background-color: #b7b3b2;
+  background-color: #bdbdbd;
 }
 
 .bg-1 {
-  background-color: #ef7a29;
+  background-color: #e65100;
 }
 
 .bg-2 {
-  background-color: #f8ab22;
+  background-color: #ff8f00;
 }
 
 .bg-3 {
@@ -70,5 +71,9 @@ body {
 }
 
 .bg-4 {
-  background-color: #83c4e8;
+  background-color: #ffd803;
+}
+
+.table td a {
+  color: #40c4ff !important;
 }
