--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,10 +1,14 @@
 .header {
+  width: 100%;
+  position: sticky;
+  z-index: 9999;
+  top: 0;
   ul {
     margin: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #ffa838;
+    background-color: #ff8f00;
   }
   li {
     list-style: none;
