--- a/app/views/each_user/index.html.slim
+++ b/app/views/each_user/index.html.slim
@@ -1,19 +1,24 @@
 h1 = "#{current_user.name} タスク状況"
 
-.form.shadow.p-5.rounded.
+.form.shadow.p-4.rounded
   h2 更新タスク推移
 
-  .my-4= line_chart current_user.tasks.group_by_day(:updated_at, time_zone: "Tokyo").count
+  .my-4= line_chart current_user.tasks.group_by_day(:updated_at, time_zone: "Tokyo").count , height: "100px"
+
+.form.shadow.p-5.rounded.
+  h2 各タスクの作業期間
+
+  .my-4= timeline Task.pluck(:name, :created_at, :end_time), discrete: true
 
 h1 タスク内訳
 
 .top_task.row.mt-4
-    .col-lg-6.col-md-12.my-3.px-1.form.shadow.p-5.rounded.
+    .col-lg-6.col-md-12.my-3.px-1.form.shadow.p-5.rounded
       .h3.text-center Status 内訳
-      = pie_chart ({"Untouched": current_user.tasks.where(status: "untouched").count,"WIP": current_user.tasks.where(status: "wip").count, "DONE": current_user.tasks.where(status: "done").count})
-    .col-lg-6.col-md-12.my-3.px-1.form.shadow.p-5.rounded.
+      = pie_chart ({"Untouched": current_user.tasks.where(status: "untouched").count,"WIP": current_user.tasks.where(status: "wip").count, "DONE": current_user.tasks.where(status: "done").count}), colors: ["#ef7a29", "#f8ab22", "#b7b3b2"]
+    .col-lg-6.col-md-12.my-3.px-1.form.shadow.p-5.rounded
       .h3.text-center Priority 内訳
-      = pie_chart ({"LOW": current_user.tasks.where(priority: "low").count,"MEDIUM": current_user.tasks.where(priority: "medium").count, "HIGH": current_user.tasks.where(priority: "high").count})
+      = pie_chart ({"HIGH": current_user.tasks.where(priority: "high").count,"MEDIUM": current_user.tasks.where(priority: "medium").count, "LOW": current_user.tasks.where(priority: "low").count}), colors: ["#ef7a29", "#f8ab22", "#fbc695"]
 
 .form.shadow.p-5.rounded.mb-3
   h3 CSV for Task
