パンくずリストの実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,7 @@
 @import "admin/users";
 @import "trix/dist/trix.css";
 @import "actiontext";
+@import "breadcrumbs";
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
