--- a/app/views/admin/users/edit.html.slim
+++ b/app/views/admin/users/edit.html.slim
@@ -1,4 +1,6 @@
 - provide(:title,  "Edit User")
+- breadcrumb :admin_user_edit
+
 h1 Edit User
 .userEditPage
 == render partial: 'form', user: @user
