--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -1,3 +1,5 @@
+- breadcrumb :admin_user_index
+
 h1 Users Table
 = link_to '新規登録', new_admin_user_path, class: 'btn btn-outline-warning mb-3'
 table.table.table-hover.table-sm
