--- a/app/views/admin/users/new.html.slim
+++ b/app/views/admin/users/new.html.slim
@@ -1,4 +1,6 @@
 - provide(:title, "Create User")
+- breadcrumb :admin_user_new
+
 h1 Create User
 .userCreatePage
   == render partial: 'form', user: @user
