add: メール送信機能を追加/確認

--- a/app/views/task_mailer/creation_email.html.slim
+++ b/app/views/task_mailer/creation_email.html.slim
@@ -3,22 +3,25 @@
 ul
   li
     | #{Task.human_attribute_name(:name)}：
-    = task.name
+    = @task.name
   li
     |　#{Task.human_attribute_name(:memo)}：
-    = simple_format(memo)
+    = simple_format(@task.memo)
   li
     |　#{Task.human_attribute_name(:end_time)}：
-    = task.:end_time
+    = @task.end_time
   li
     |　#{Task.human_attribute_name(:status)}：
-    = task.:status
+    = @task.status
   li
     |　#{Task.human_attribute_name(:priority)}：
-    = task.:priority
+    = @task.priority
   li
     |　#{Task.human_attribute_name(:label)}：
-    - task.labels.each do |label|
+    - @task.labels.each do |label|
             .badge.badge-pill.mr-1
               = label.name
+  li
+    |画像/コンテンツ:
+    == @task.content
 
