add: set pagination helper

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -54,6 +54,11 @@ body {
   border-radius: 15px;
 }
 
+.pagination_helper{
+  text-align: center;
+  color: #bdbdbd;
+}
+
 .bg-0 {
   background-color: #bdbdbd;
 }
